--- a/pages/global.css
+++ b/pages/global.css
@@ -32,3 +32,57 @@ body {
 /* Example media query for desktops */
 @media (min-width: 1024px) {
 }
+.cursor::after {
+  display: block;
+  content: '';
+  position: absolute;
+  width: 4px;
+  height: 100%;
+  background-color: #fff;
+  animation: cursor 0.6s linear infinite alternate;
+  will-change: opacity;
+}
+ 
+@keyframes cursor {
+  0%,
+  40% {
+    opacity: 1;
+  }
+ 
+  60%,
+  100% {
+    opacity: 0;
+  }
+}
+.writer {
+    font-family: QuickSand, monospace;
+	display: inline-block;
+}
+.writer-text {
+  display: inline-block;
+  overflow: hidden;
+  letter-spacing: 2px;
+ animation: typing 5s steps(30, end), blink .75s step-end infinite;
+  white-space: nowrap;
+  font-size: 30px;
+  font-weight: 700;
+  border-right: 4px solid orange;
+  box-sizing: border-box;
+}
+@keyframes typing {
+  from { 
+      width: 0% 
+  }
+  to { 
+      width: 100% 
+  }
+}
+
+@keyframes blink {
+  from, to { 
+      border-color: transparent 
+  }
+  50% { 
+      border-color: orange; 
+  }
+}
