--- a/pages/global.css
+++ b/pages/global.css
@@ -5,6 +5,35 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@screen sm {
+  /* Small screens: up to 640px */
+  .writer-text {
+    font-size: 20px;
+  }
+}
+
+@screen md {
+  /* Medium screens: 641px to 767px */
+  .writer-text {
+    font-size: 24px;
+  }
+}
+
+@screen lg {
+  /* Large screens: 768px to 1023px */
+  .writer-text {
+    font-size: 28px;
+  }
+}
+
+@screen xl {
+  /* Extra-large screens: 1024px and above */
+  .writer-text {
+    font-size: 32px;
+  }
+}
+
 body {
   @apply leading-[normal] m-0;
 }
@@ -99,4 +128,46 @@ body {
 
 .bot {
   background-color: #efefef;
+}
+
+@media (max-width: 640px) {
+  .switch_view {
+    display:none
+  }
+}
+
+@media (min-width: 640px) {
+  .switch_mview {
+    display: none;
+  }
+}
+
+.hsfont {
+  font-size: 32px;
+}
+.pf{
+  font-family: Poppins;
+  font-size: 10px;
+}
+.hpf{
+  font-family: Poppins;
+  font-size: 24px;
+}
+.sendform {
+  font-size: 12px;
+}
+.footer_font {
+  font-size: 12px;
+}
+.testimonial-container {
+  padding-top: 200px;
+  width: 95%;
+  padding-left: 10px;
+  justify-content: center;
+}
+.arrows {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 0px;
+  padding-right: 0px;
 }
